updated webpage saving for a moment to recover brain

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 body {
+    background-image: url(https://wallpaperboat.com/wp-content/uploads/2019/10/website-background-texture-23.jpg);
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -8,7 +9,7 @@ body {
 header {
     background-size: cover;
     background-position: center;
-    background: lightslategray;
+    background: rgba(94, 131, 145, .57);
     height: 10vh;
 }
 
@@ -19,8 +20,9 @@ nav {
 }
 
 nav ul {
-    float: right;
+    float: left;
     margin: 0;
+    padding-left: 20px;
 }
 
 .rotatingTitle {
@@ -35,16 +37,21 @@ nav ul {
     display: inline-flex;
 }
 
-/* #bioContainer {
-    display: none;
+nav.top{
+    background-color: black;
+}
+
+#bioContainer {
+    color: white;
 }
 
 #resumeContainer {
-    display: none;
+    color: white;
+    
 }
 
 #projectsContainer {
-    display: none;
+    color: white;
 }
 
 #projectsContainer div {
@@ -61,4 +68,32 @@ nav ul {
 
 #projectThree{
     background-image: url(/img/soft-release.jpeg);
-} */
+}
+
+@media (max-width: 500px){
+    body {}
+    header {}
+    nav {}
+    nav ul {}
+
+    #navBar {
+        
+    }
+
+    .rotatingTitle {
+        color: red;
+    }
+    
+    .navbuttons {
+    }
+    
+    .navbutton {
+        display: block;
+        
+    }
+    
+    nav.scroll {
+        background-color: rgba(0,0,0,0.7);
+    }
+
+}
