--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* 
 body {
     background-image: url(https://wallpaperboat.com/wp-content/uploads/2019/10/website-background-texture-23.jpg);
     margin: 0;
@@ -9,21 +9,23 @@ body {
 header {
     background-size: cover;
     background-position: center;
-    background: rgba(94, 131, 145, .57);
+    background: rgba(44, 2, 52, 0.7);
     height: 10vh;
 }
 
 nav {
     position: fixed;
     width: 100%;
-    line-height: 60px;
+    line-height: 10vh;
 }
 
 nav ul {
-    float: left;
+    float: right;
     margin: 0;
-    padding-left: 20px;
+    padding-right: 20px;
 }
+
+
 
 .rotatingTitle {
     color: purple;
@@ -35,10 +37,15 @@ nav ul {
 
 .navbutton {
     display: inline-flex;
+    text-decoration: none;
 }
 
 nav.top{
     background-color: black;
+}
+
+#subContainer {
+    text-align: center;
 }
 
 #bioContainer {
@@ -70,6 +77,11 @@ nav.top{
     background-image: url(/img/soft-release.jpeg);
 }
 
+li a {
+    text-decoration: none;
+    color:white;
+}
+
 @media (max-width: 500px){
     body {}
     header {}
@@ -97,3 +109,128 @@ nav.top{
     }
 
 }
+
+a.mainProj {
+    color:black;
+    text-decoration:  none;
+} 
+
+first attempt at css
+
+*/
+
+
+body {
+    font-family: 'Play', sans-serif;
+}
+/*
+
+header {
+    height: 100vh;
+    background-color: lightseagreen;
+    font-size: 40px;
+    
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+#icon {
+    color: white;
+    padding-left: 5px;
+}
+
+ul {
+    display: flex; 
+    list-style-type: none;
+}
+
+li {
+    
+    width: 125px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+}
+
+h1 {
+    font-size: 48px;
+}
+
+
+#subNavAr {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+}
+
+#subNav {
+    margin-left: 75px;
+    margin-bottom: 150px;
+}
+p {
+    font-size: 24px;
+    font-weight: 100;
+    margin: 5px;
+}
+
+#mainButton {
+    width: 100px;
+    height: 42px;
+    background-color: purple;
+    color:white;
+    border-radius: 25px;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 18px;
+    margin-top: 15px;
+}
+second css attempt
+
+*/ 
+
+
+@media (max-width: 500px){
+    body {
+        font-family: 'Play', sans-serif;
+    }
+    header {
+        width: 100vw;
+        background-color: lightseagreen;
+        font-size: 15px;
+    }
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+    #navButtons {
+        display: flex;
+        list-style-type: none;
+    }
+    li .navButton {
+        
+    }
+    a {
+        display: flex;
+        justify-content: space-between;
+        /* width: 25px;
+        margin: 0px 5px;
+        padding-right: 5px; */
+        padding-right: 8px;
+    }
+
+
+}
+
+@media (orientation: landscape) {
+    
+}
+
+
