--- a/style.css
+++ b/style.css
@@ -1,161 +1,34 @@
-/* 
-body {
-    background-image: url(https://wallpaperboat.com/wp-content/uploads/2019/10/website-background-texture-23.jpg);
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
-
-header {
-    background-size: cover;
-    background-position: center;
-    background: rgba(44, 2, 52, 0.7);
-    height: 10vh;
-}
-
-nav {
-    position: fixed;
-    width: 100%;
-    line-height: 10vh;
-}
-
-nav ul {
-    float: right;
-    margin: 0;
-    padding-right: 20px;
-}
-
-
-
-.rotatingTitle {
-    color: purple;
-}
-
-.navbuttons {
-    display: flex;
-}
-
-.navbutton {
-    display: inline-flex;
-    text-decoration: none;
-}
-
-nav.top{
-    background-color: black;
-}
-
-#subContainer {
-    text-align: center;
-}
-
-#bioContainer {
-    color: white;
-}
-
-#resumeContainer {
-    color: white;
-    
-}
-
-#projectsContainer {
-    color: white;
-}
-
-#projectsContainer div {
-
-}
-
-#projectOne {
-    background-image: url(/img/monitor.jpg);
-}
-
-#projectTwo {
-    background-image: url(/img/brackets.png);
-}
-
-#projectThree{
-    background-image: url(/img/soft-release.jpeg);
-}
-
-li a {
-    text-decoration: none;
-    color:white;
-}
-
-@media (max-width: 500px){
-    body {}
-    header {}
-    nav {}
-    nav ul {}
-
-    #navBar {
-        
-    }
-
-    .rotatingTitle {
-        color: red;
-    }
-    
-    .navbuttons {
-    }
-    
-    .navbutton {
-        display: block;
-        
-    }
-    
-    nav.scroll {
-        background-color: rgba(0,0,0,0.7);
-    }
-
-}
-
-a.mainProj {
-    color:black;
-    text-decoration:  none;
-} 
-
-first attempt at css
-
-*/
-
-
 body {
     font-family: 'Play', sans-serif;
 }
-/*
+
 
 header {
     height: 100vh;
     background-color: lightseagreen;
-    font-size: 40px;
+    font-size: 30px;
     
 }
+
 nav {
     display: flex;
     justify-content: space-between;
     
 }
 
-#icon {
-    color: white;
-    padding-left: 5px;
-}
 
-ul {
+#navButtons {
     display: flex; 
     list-style-type: none;
 }
 
-li {
-    
-    width: 125px;
-}
 
 a {
+    
     text-decoration: none;
-    font-size: 25px;
+    font-size: 32px;
     color: white;
+    padding-right: 15px;
 }
 
 h1 {
@@ -170,10 +43,16 @@ h1 {
     justify-content: center;
 }
 
+
 #subNav {
     margin-left: 75px;
     margin-bottom: 150px;
 }
+
+h1{
+    font-size: 45px;
+}
+
 p {
     font-size: 24px;
     font-weight: 100;
@@ -182,55 +61,185 @@ p {
 
 #mainButton {
     width: 100px;
-    height: 42px;
+    height: 35px;
     background-color: purple;
     color:white;
     border-radius: 25px;
     text-align: center;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-size: 18px;
-    margin-top: 15px;
+    font-size: 20px;
+    margin-top: -30px;
+    margin-left: 485px;
 }
-second css attempt
 
-*/ 
+.top {
+    background-color: rgba(140,20,252,0.7);
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
 
+#projectOne {
+    color:blueviolet;
+}
+#projectTwo {
+    color: lightgreen;
+}
+#projectThree {
+    color: red;
+}
+
+
+#fdc {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+#sales {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+li {
+    font-size: 24px;
+}
+
+
+/* @media (orientation: landscape) {
+    
+} */
 
 @media (max-width: 500px){
     body {
         font-family: 'Play', sans-serif;
     }
     header {
+        height: 100vh;
         width: 100vw;
         background-color: lightseagreen;
         font-size: 15px;
     }
     nav {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
     }
     #navButtons {
         display: flex;
         list-style-type: none;
     }
-    li .navButton {
-        
+    
+    /* #borgerMenu {
+        position: fixed;
+        z-index:5;
+        top: 1rem;
+        left: 1rem;
+        border: black solid 1px;
+        background: white;
+        cursor: pointer;
     }
+
+    .closeBorger {
+        display: none;
+    }
+
+    .nav {
+        position: fixed;
+        transform:translateY(-100%);
+        transition: transform 0.2s;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 4;
+        background: black;
+        color:white;
+        list-style: none;
+        padding-top: 4rem;
+    } */
     a {
         display: flex;
         justify-content: space-between;
-        /* width: 25px;
-        margin: 0px 5px;
-        padding-right: 5px; */
-        padding-right: 8px;
+        padding-right: 15px;
+        text-decoration: none;
+        font-size: 15px;
+        color: white;
     }
 
 
-}
+    #subNavAr {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        margin-left: 55px;
+    }
 
-@media (orientation: landscape) {
-    
+    #subNav {
+        margin-left: 15px;
+        margin-bottom: 100px;
+    }
+
+    h1{
+        font-size: 35px;
+    }
+
+    p {
+        font-size: 24px;
+        font-weight: 100;
+        margin: 5px;
+    }
+
+    #mainButton {
+        width: 100px;
+        height: 35px;
+        background-color: purple;
+        color:white;
+        border-radius: 25px;
+        text-align: center;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font-size: 20px;
+        margin-top: 15px;
+        margin-left: 85px;
+    }
+
+
+    #scrollPoint {
+        box-sizing: border-box;
+    }
+
+    #resumeContainer {
+        box-sizing: border-box;
+    }
+
+    .top {
+        background-color: rgba(140,20,252,0.7);
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
+    #projectOne {
+        color:blueviolet;
+    }
+    #projectTwo {
+        color: lightgreen;
+    }
+    #projectThree {
+        color: red;
+    }
+
+    #fdc {
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    #sales {
+        font-size: 30px;
+        font-weight: bold;
+    }
+
 }
 
 
