--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+}
+
+html {
+    background-color: blueviolet;
+}
 body {
     font-family: 'Play', sans-serif;
 }
@@ -21,6 +28,7 @@ nav {
 #navButtons {
     display: flex; 
     list-style-type: none;
+    margin-right: 10px;
 }
 
 
@@ -81,14 +89,60 @@ p {
     width: 100%;
 }
 
+#bioContainer {
+    height: 95.5vh;
+    margin-left: 15px;
+    margin-right: 15px;
+    color: white;
+    background-color: darkmagenta;
+}
+
+#bioContainer h2 {
+    text-align: center;
+}
+
+#bioContainer p {
+    margin-top: 25px;
+}
+
+#projectsContainer {
+    height: 90vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 #projectOne {
-    color:blueviolet;
+    margin-top: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color:white;
+    background-color: teal;
+    /* background-image: "url(/Users/acham/dev/portfolio/Portfolio/img/brackets.png)";
+    height: "150px";
+    margin: "10px";
+    padding: "5px";
+    border-radius: "12px";
+    overflow: "auto"; */
 }
 #projectTwo {
-    color: lightgreen;
+    margin-top: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: white;
+    background-color: teal;
 }
 #projectThree {
-    color: red;
+    margin-top: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
+    color: white;
+    background-color: teal;
+}
+
+#projectHead {
+    color: white;
 }
 
 
@@ -110,7 +164,18 @@ li {
 /* @media (orientation: landscape) {
     
 } */
+/* 
 
+
+
+
+//////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+
+*/
 @media (max-width: 500px){
     body {
         font-family: 'Play', sans-serif;
@@ -124,40 +189,37 @@ li {
     nav {
         display: flex;
         justify-content: center;
+        height: 30px;
     }
     #navButtons {
+        margin-top: 5px;
         display: flex;
         list-style-type: none;
     }
-    
-    /* #borgerMenu {
-        position: fixed;
-        z-index:5;
-        top: 1rem;
-        left: 1rem;
-        border: black solid 1px;
-        background: white;
-        cursor: pointer;
+
+    #bioContainer {
+        height: 95.5vh;
+        margin-left: 15px;
+        margin-right: 15px;
+        color: white;
+        background-color: darkmagenta;
     }
 
-    .closeBorger {
-        display: none;
+    #bioContainer h2 {
+        text-align: center;
     }
 
-    .nav {
-        position: fixed;
-        transform:translateY(-100%);
-        transition: transform 0.2s;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 4;
-        background: black;
-        color:white;
-        list-style: none;
-        padding-top: 4rem;
-    } */
+    #resumeContainer {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    #resumeContainer h1 {
+        text-align: center;
+        margin-top: 15px;
+        box-sizing: border-box;
+    }
+
     a {
         display: flex;
         justify-content: space-between;
@@ -210,10 +272,6 @@ li {
         box-sizing: border-box;
     }
 
-    #resumeContainer {
-        box-sizing: border-box;
-    }
-
     .top {
         background-color: rgba(140,20,252,0.7);
         position: fixed;
@@ -221,14 +279,40 @@ li {
         width: 100%;
     }
 
+    #projectsContainer {
+        height: 90vh;
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
     #projectOne {
-        color:blueviolet;
+        margin-top: 35px;
+        margin-left: 20px;
+        margin-right: 20px;
+        color:white;
+        background-color: teal;
+        /* background-image: "url(/Users/acham/dev/portfolio/Portfolio/img/brackets.png)";
+        height: "150px";
+        margin: "10px";
+        padding: "5px";
+        border-radius: "12px";
+        overflow: "auto"; */
     }
     #projectTwo {
-        color: lightgreen;
+        margin-top: 35px;
+        margin-left: 20px;
+        margin-right: 20px;
+        color: white;
+        background-color: teal;
     }
     #projectThree {
-        color: red;
+        margin-top: 35px;
+        margin-left: 20px;
+        margin-right: 20px;
+        color: white;
+        background-color: teal;
     }
 
     #fdc {
